[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/YouTubeAPI/YouTubeAPI_Test.gd" type="Script" id=1]
[ext_resource path="res://game/YouTubeAPI/YouTubeAPI.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/scripts/HTTPRequestPool.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/YouTubeAPI/youtube_icon.png" type="Texture" id=4]

[node name="YouTubeAPI_Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouTubeAPI" parent="." instance=ExtResource( 2 )]

[node name="YoutubeIcon" type="TextureRect" parent="."]
margin_left = 9.0
margin_top = 5.0
margin_right = 153.0
margin_bottom = 37.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchLineEdit" type="LineEdit" parent="."]
margin_left = 164.0
margin_top = 10.0
margin_right = 485.0
margin_bottom = 34.0
text = "heartbreak anthem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchButton" type="Button" parent="."]
margin_left = 494.0
margin_top = 12.0
margin_right = 548.0
margin_bottom = 32.0
text = "Search"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultsList" type="ItemList" parent="."]
margin_left = 7.0
margin_top = 42.0
margin_right = 654.0
margin_bottom = 473.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThumbnailRequestPool" parent="." instance=ExtResource( 3 )]

[connection signal="failed_request" from="YouTubeAPI" to="." method="_on_YouTubeAPI_failed_request"]
[connection signal="search_complete" from="YouTubeAPI" to="." method="_on_YouTubeAPI_search_complete"]
[connection signal="pressed" from="SearchButton" to="." method="_on_SearchButton_pressed"]
[connection signal="request_complete" from="ThumbnailRequestPool" to="." method="_on_ThumbnailRequestPool_request_complete"]
